* added MissingPluginException to apfexceptions.py
* split the code in method APFQueue.run( ) into 3 separated methods, so they could be called one by one from outside
* starting the APFQueue threads in a separate method _start( )
* using Queue() to serialize the condor_submit tasks
* using self.factory.qcl instead of self.qcl in cleanlogs, so it always keeps the latest configuration, even after reconfig
* Factory.__init__ refactorized, for clarity
* created directory sbin/ add added first draft version of autopyfactory-reconfigure
* using method Config.compare() to decide which queues to start and stop on every re-configuration
* created first draft code for a listener class
* created method Config.addsection() to add and entire section to a configloader object
* factory.py split into two files: factory.py and queues.py
* APFQueue objects are started all of them from method APFQueuesManager::start(), instead of being started when created
* added configplugin variable to autopyfactory.conf
* config/ plugins
* moved Singleton templates from factory.py to interfaces.py
* moved x509 proxy management from CondorBase submit plugin to CondorGrid submit plugin
* added methods isequal( ), sectionisequal( ) and compare( ) to configloader.py
* added external/ directory, with panda client in it
* trying several paths to import panda Client.py
* in APFQueue.__init__() use a self.qcl with only one section (current queue), and in every Batch Submit plugin __init__() get apfqueue.qcl instead of apfqueue.factory.qcl
* default value for queuesDirConf set to None to allow start just from install
* printing a WARNING log message when merging two sections with the same name
* set the default value of "override" to False (the new object has precedence over the current one)
* creating the directory baseLogDir if it does not exist yet (for example, first time APF is installed)
* allowing both queues.conf and queues.d/ at the same time, each one with its own merging mechanism